# lwan-calculator-api

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: calculator.hpp
src/: calculator.cpp  main.cpp
