CMAKE_MINIMUM_REQUIRED( VERSION 2.8)

PROJECT(calculator-server CXX)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

find_package(ZLIB REQUIRED)

SET(SOURCES src/main.cpp src/calculator.cpp)

FILE(GLOB_RECURSE HEADERS include/ *.hpp)

INCLUDE_DIRECTORIES(include/)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${SOURCES} ${HEADERS})

SET_PROPERTY (TARGET ${CMAKE_PROJECT_NAME} APPEND_STRING PROPERTY COMPILE_FLAGS "-std=c++11 -Wall -pedantic -Wextra -Weffc++ -Werror -O3 -finline-functions -finline-limit=64")

TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME} lwan-common.a ${ZLIB_LIBRARIES} pthread dl jsonpack)
